--- a/brafe2-pure/assets/css/style.css
+++ b/brafe2-pure/assets/css/style.css
@@ -108,11 +108,11 @@ body {
   margin-top: 5px;
 }
 
-.sabor {
+.flavor {
   overflow: hidden;
 }
 
-.sabor span {
+.flavor span {
   text-indent: -200px;
   display: inline-block;
   width: 15px;
@@ -122,17 +122,17 @@ body {
   background: currentColor;
 }
 
-.sabor-3 {
+.flavor-3 {
   color: #492901;
   box-shadow: 20px 0 0 0, 40px 0 0 0, 60px 0 0 0;
 }
 
-.sabor-4 {
+.flavor-4 {
   color: #C17139;
   box-shadow: 20px 0 0 0, 40px 0 0 0, 60px 0 0 0, 80px 0 0 0;
 }
 
-.sabor-5 {
+.flavor-5 {
   color: #D7A54D;
   box-shadow: 20px 0 0 0, 40px 0 0 0, 60px 0 0 0, 80px 0 0 0, 100px 0 0 0;
 }
