--- a/brafe2-grid/assets/css/grid.css
+++ b/brafe2-grid/assets/css/grid.css
@@ -9,7 +9,7 @@
   clear: both;
 }
 
-.grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, .grid-8, .grid-9, .grid-10, .grid-11, .grid-12 {
+.grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, .grid-8, .grid-9, .grid-10, .grid-11, .grid-12, .grid-mobile-6  {
   margin-left: 10px;
   margin-right: 10px;
   float: left;
@@ -30,6 +30,19 @@
 .grid-11 { width: calc(91.666% - 20px); }
 .grid-12 { width: calc(100% - 20px); }
 
+.grid-mobile-6 { width: calc(50% - 20px); }
+
+.row, .row-mobile {
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
+.row::after, .row::before, .row-mobile::after, .row-mobile::before {
+  content: '';
+  display: table;
+  clear: both;
+}
+
 @media (max-width: 739px) {
   .container {
     max-width: 300px;
@@ -41,4 +54,10 @@
     float: none;
     width: 100%;
   }
+
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
+
