--- a/brafe2-grid/assets/css/style.css
+++ b/brafe2-grid/assets/css/style.css
@@ -157,3 +157,13 @@ body {
   line-height: 1.4em;
   margin-top: 80px;
 }
+
+@media (max-width: 739px) {
+  .filter {
+    display: none;
+  }
+
+  .products h1 {
+    text-align: center;
+  }
+}
